--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,23 +4,162 @@
   height: 100vh;
   min-height: 900px;
   background-color: #000;
+  display: flex;
+  overflow: hidden;
 }
 
 .section-home .main-content {
   height: 100%;
-  background-color: #f00;
   z-index: 9999;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .section-home-video-container {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
 .section-home-video-container video {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+}
+
+.section-home-title {
+  width: 60%;
+  margin: 0 0 110px;
+}
+
+.section-home-title img {
+  margin-top: 45px;
+  width: 100%;
+}
+
+.section-home-title-top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.section-home-title-top p {
+  font-size: 32px;
+  letter-spacing: 0.08em;
+  flex: 1;
+}
+
+.section-home-title-top:after {
+  display: block;
+  content: "";
+  height: 1px;
+  background-color: #fff;
+  margin-left: 24px;
+  flex: 1;
+}
+
+.section-home-download {
+  position: absolute;
+  right: 60px;
+  bottom: 80px;
+  max-width: 155px;
+  width: 15%;
+}
+
+.section-home-download > div {
+  position: relative;
+  border-radius: 100px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-home-download > div a {
+  line-height: 1.2;
+  text-align: center;
+  font-size: 18px;
+  font-family: "GT Walsheim Pro";
+  font-weight: 700;
+  -webkit-text-stroke: 1px;
+  -webkit-text-stroke-color: #000;
+  z-index: 99;
+}
+
+.section-home-download > div img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url(/assets/circle_line.png) no-repeat center/cover;
+  animation: circle_rotation 10s infinite linear;
+  transition: 0.6s;
+}
+
+.section-home-download > div:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+.google-down {
+  background-image: url("/assets/B_google_icon.png");
+}
+
+.apple-down {
+  background-image: url("/assets/B_apple_icon.png");
+  margin-top: 45px;
+}
+
+.section-download {
+  width: 100vw;
+  height: 100vh;
+  min-height: 900px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-download .text-container {
+  font-size: 120px;
+  line-height: 1;
+  display: flex;
+  flex-direction: column;
+  justify: center;
+  align-items: center;
+}
+
+.down-btn-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 75px;
+  justify-content: center;
+}
+
+.down-btn-container a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  color: #666;
+  width: 220px;
+  height: 65px;
+  background: #fff;
+  border-radius: 100px;
+  font-size: 20px;
+}
+
+.down-btn-container a + a {
+  margin-left: 20px;
+}
+
+.down-btn-container img {
+  margin-right: 10px;
 }
