--- a/src/css/guide.css
+++ b/src/css/guide.css
@@ -108,9 +108,6 @@
   display: flex;
   padding: 8vh 0;
   background-color: #fff;
-  width: 1970px;
-}
-
-.swiper-slide {
-  width: auto !important;
+  width: 100vw;
+  height: 100vh;
 }
