--- a/src/css/guide.css
+++ b/src/css/guide.css
@@ -125,9 +125,84 @@
 
 .section-guide-content-container {
   display: flex;
-  padding: 8vh 0;
-  min-width: 100vw;
-  height: 100vh;
+  flex-wrap: nowrap;
+  margin-left: 270px;
+  padding: 0px 200px;
+  width: 100%;
+  height: 100%;
+  color: #000;
+}
+
+.intro-box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 40px 50px 30px;
+  width: 620px;
+  height: 100%;
+  overflow: hidden;
+  border: 1px solid #000;
+  backdrop-filter: blur(5px);
+  text-align: center;
+  z-index: 9;
+}
+
+.intro-box-text {
+  height: 30%;
+}
+
+.intro-box-index {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 60px;
+  height: 32px;
+  font-size: 18px;
+  border: 1px solid #000;
+  border-radius: 100px;
+}
+
+.intro-box-title {
+  font-size: 52px;
+  font-family: "GT Walsheim Pro";
+  font-weight: 500;
+  margin: 10px 0 18px;
+}
+
+.intro-box-title span {
+  font-family: Garamond;
+  font-weight: 400;
+}
+
+.intro-box-body {
+  font-family: Pretendard;
+  font-wieght: 400;
+  font-size: 18px;
+  line-height: 1.4;
+  letter-spacing: -0.025em;
+  color: #666;
+}
+
+.intro-box-slide {
+  position: relative;
+  height: 70%;
+  margin: 30px 0;
+}
+
+.intro-box-slide .swiper-wrapper,
+.intro-box-slide .swiper-slide {
+  width: 100%;
+}
+
+.intro-box-slide .swiper-wrapper .swiper-slide img {
+  height: 100%;
+  width: auto;
+}
+
+.intro-box:not(:first-child) {
+  margin-left: 60px;
 }
 
 .sticky-parent {
