--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -53,6 +53,43 @@
   vertical-align: top; */
 }
 
+.section-blog .blog-posts {
+  position: relative;
+}
+
+.section-blog .blog-posts:hover {
+  cursor: none;
+}
+
+.section-blog .blog-posts:hover .blog-drag-cursor {
+  opacity: 1;
+}
+
+.section-blog .blog-drag-cursor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  display: inline-block;
+  background: #000;
+  pointer-events: none;
+  z-index: 99;
+}
+
+.section-blog .blog-drag-cursor div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+}
+
 .section-blog .view-more {
   display: flex;
   flex-direction: row;
