--- a/src/css/service.css
+++ b/src/css/service.css
@@ -2,7 +2,7 @@
   width: 100vw;
   min-height: 860px;
   height: 100vh;
-  background: url(../assets/se04_BG.jpg) no-repeat center/cover;
+  background: url(../../assets/se04_BG.jpg) no-repeat center/cover;
   color: #000;
 }
 
